--- a/examples/hello-world-lit-js/package.json
+++ b/examples/hello-world-lit-js/package.json
@@ -17,9 +17,10 @@
   },
   "devDependencies": {
     "@custom-elements-manifest/analyzer": "^0.4.17",
-    "@web/dev-server": "^0.1.28",
+    "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.10.0",
     "wepack-cli": "^0.0.1-security"
   },
   "customElements": "custom-elements.json"
