--- a/examples/hello-world-lit-js/package.json
+++ b/examples/hello-world-lit-js/package.json
@@ -8,7 +8,7 @@
   "module": "index.js",
   "scripts": {
     "analyze": "cem analyze --litelement",
-    "start": "web-dev-server",
+    "start": "webpack serve",
     "build": "webpack"
   },
   "dependencies": {
