Add new widget opening and title update

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sdkwidgets",
-  "version": "1.0.13",
+  "version": "1.0.14",
   "description": "Changers City SDK allows partners to build their own interactive UI widgets which can be embedded inside  Changers City app.",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -11,6 +11,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack --watch",
     "build": "tsc && webpack",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "lint": "tslint -p tsconfig.json",
